--- a/ExerciciosAula/nbproject/project.properties
+++ b/ExerciciosAula/nbproject/project.properties
@@ -24,7 +24,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/ExerciciosAula.jar
+dist.jar=${dist.dir}/ExerciciosAulaAP.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
